src/LeaderBoard.module.scss
.wrap {
    width: 800px;
    padding: 30px;
    margin: 0 auto;
    border-radius: 20px;
    background: var(--leader-board-wrap-bg-color);
    border: 1px solid var(--leader-board-wrap-border-color);
}

.title {
    font-size: 32px;
    font-weight: 700;
    line-height: 40px;
    color: var(--leader-board-title-color);
}

.selfRank {
    width: 100%;
    padding: 20px 0;
    margin-top: 30px;
    border-radius: 10px;
    background-color: var(--leader-board-self-rank-bg);

    display: flex;
    align-items: center;
    justify-content: space-around;
}

.item {
    width: 25%;
    display: flex;
    align-items: center;
    flex-direction: column;
    font-family: CircularStd;
    font-size: 14px;
    font-style: normal;
    font-weight: 450;
    line-height: 133%;

    span {
        color: var(--leader-board-self-rank-item-sp-tag-color);
    }

    p {
        margin-top: 10px;
        line-height: 24px;
        color: var(--leader-board-self-rank-item-p-tag-color);
    }
}

.emptyWrap {
    width: 100%;
    min-height: 200px;
    display: flex;
    border-radius: 16px;
    align-items: center;
    justify-content: center;
}

.noDataTips {
    font-size: 14px;
    font-weight: 450;
    color: var(--leader-board-no-data-tips-color);
}

.rankList {
    padding: 20px;
    margin-top: 30px;
    border-radius: 10px;
    background-color: var(--leader-board-rank-list-bg);
}

.tableHead {
    width: 100%;
    display: flex;
    align-items: center;
    flex: 0 0 auto;
}

.rankIndexName {
    margin-right: 80px;
    font-family: CircularStd;
    font-size: 14px;
    font-style: normal;
    font-weight: 450;
    line-height: 133%;
    color: var(--leader-board-rank-index-name-color);

    flex: 0 0 auto;
}

.rankIndexName:last-child,
.rankIndexValue:last-child {
    margin-right: 0;
}

.split {
    width: 100%;
    height: 1px;
    margin: 16px 0;
    background-color: var(--leader-board-split-bg);
}

.rankIndexValue {
    margin-right: 80px;
    font-family: CircularStd;
    font-size: 14px;
    font-style: normal;
    font-weight: 450;
    line-height: 24px;
    color: var(--leader-board-rank-index-color);

    flex: 0 0 auto;

    &[data-rank="1"] {
        color: var(--leader-board-rank-1st-color);
    }
    &[data-rank="2"] {
        color: var(--leader-board-rank-2nd-color);
    }
    &[data-rank="3"] {
        color: var(--leader-board-rank-3rd-color);
    }
}

.rankValue,
.rankIndex {
    width: 55px;
    margin-right: 43px;
}

.addrValue,
.addrIndex {
    width: 105px;
    margin-right: 80px;
}

.scoreValue,
.scoreIndex {
    width: 90px;
    margin-right: 80px;
}

.invitedValue,
.invitedIndex {
    width: 45px;
    margin-right: 65px;
}

.debtValue,
.debtIndex {
    width: 110px;
}

.listWrap {
    width: 100%;
    height: 330px;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
    display: flex;
    flex-direction: column;
}

.listWrap::-webkit-scrollbar {
    width: 0;
    height: 0;
}

.rankItem {
    width: 100%;
    margin-bottom: 10px;
    display: flex;
    align-items: center;
    flex: 0 0 auto;
}

.rankItem:last-child {
    margin-bottom: 0;
}

.invitedValue {
    display: flex;
    justify-content: center;
}

@media (max-width: 1199px) {
    .selfRank {
        padding: 20px;
        flex-wrap: wrap;
    }

    .item {
        width: 50%;
        align-items: flex-start;
    }

    .item:nth-child(n + 3) {
        margin-top: 20px;
    }
}

@media screen and (min-width: 744px) and (max-width: 1199px) {
    .wrap {
        width: 684px;
    }

    .rankValue,
    .rankIndex {
        width: 50px;
        margin-right: 28px;
    }

    .addrValue,
    .addrIndex {
        width: 100px;
        margin-right: 50px;
    }

    .scoreValue,
    .scoreIndex {
        width: 90px;
        margin-right: 50px;
    }

    .invitedValue,
    .invitedIndex {
        width: 45px;
        margin-right: 35px;
        justify-content: flex-start;
    }

    .debtValue,
    .debtIndex {
        width: 100px;
        margin-right: 0;
    }
}

@media screen and (max-width: 743px) {
    .wrap {
        width: 100%;
        padding: 0;
        border: none;
        background: transparent;
    }

    .title {
        font-size: 25px;
        line-height: normal;
    }

    .item {
        width: 50%;
        font-size: 12px;
    
        p {
            margin-top: 5px;
            font-size: 14px;
        }
    }

    .rankList {
        padding: 20px 0 20px 10px;
        background-color: transparent;
    }

    .split {
        display: none;
    }

    .listWrap {
        height: 288px;
    }

    .rankItem {
        height: 36px;
        margin-bottom: 0;
        overflow-x: scroll;
        scrollbar-width: none;
        -ms-overflow-style: none;
    }

    .rankItem:first-child {
        margin-top: 13px;
    }

    .rankItem::-webkit-scrollbar {
        width: 0;
        height: 0;
    }

    .rankIndexName {
        font-size: 12px;
    }

    .rankIndex,
    .rankValue {
        width: 45px;
        margin-right: 15px;
    }

    .addrValue,
    .addrIndex {
        width: 80px;
        margin-right: 30px;
    }

    .scoreValue,
    .scoreIndex {
        width: 40px;
        margin-right: 30px;
    }

    .invitedValue,
    .invitedIndex {
        width: 40px;
        margin-right: 20px;
        justify-content: flex-start;
    }

    .debtValue,
    .debtIndex {
        width: 80px;
        margin-right: 0;
    }

    .debtValue {
        margin-right: 10px !important;
    }
}

